# eggroll-trainer

./: .gitattributes  .gitignore  CONTRIBUTING.md  DOCS_PLAN.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: README.md  RELEASE_SETUP.md
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  test.yml
docs/: index.md
docs/api-reference/: base.md  eggroll.md  index.md  simple.md  vanilla.md
docs/examples/: basic-usage.md  custom-trainers.md  index.md  mnist-classification.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/research/: background.md  benchmarks.md  eggroll-algorithm.md  index.md
docs/user-guide/: advanced-usage.md  core-concepts.md  fitness-functions.md  index.md  trainers.md
eggroll_trainer/: __init__.py  base.py  eggroll.py  simple.py  vanilla.py
examples/: README.md  basic_example.py  comparison_framework.py  eggroll_example.py  mnist_comparison.py  mnist_eggroll.py  models.py  run_all_comparisons.py  simple_example.py  test_comprehensive.py  test_eggroll.py  test_mnist_eggroll.py  utils.py
examples/animals_3d/: README.md  __init__.py  capture_screenshots.py  mujoco_utils.py  run_all_examples.py  utils.py  verify_imports.py  visualization.py  world_builder.py
examples/animals_3d/advanced/: __init__.py  aerial_locomotion.py  cloth_manipulation.py  cloth_walking.py  complex_locomotion.py  custom_obstacle_course.py  hierarchical_control.py  morphing_creature.py  multi_agent_cooperation.py  muscle_actuated.py  object_manipulation.py  skinned_character.py  soft_rigid_interaction.py  tendon_driven_robot.py  terrain_generation.py  underwater_locomotion.py
examples/animals_3d/models/: __init__.py  aerial_env.xml  cloth_simple.xml  cloth_with_ant.xml  morphing_creature_full.xml  muscle_full.xml  muscle_leg.xml  obstacle_course_simple.xml  soft_body_simple.xml  tendon_arm_full.xml  tendon_arm_simple.xml  terrain_hills.xml  underwater_env.xml  underwater_full.xml
examples/rl/: EXPERIMENTS.md  EXPERIMENT_SUMMARY.md  README_EXPERIMENTS.md  __init__.py  comparison.py  environments.py  framework.py  models.py  quick_experiment.py  results.py  run_experiments.py  test_basic.py
(+10 files in other folders)
